Colaboratory を使用して作成しました

--- a/haskell_richardbird.ipynb
+++ b/haskell_richardbird.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_richardbird.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM59kjgGbG230EREAIIpKei",
+      "authorship_tag": "ABX9TyM3whNdFzZCu6oUCFYOZFNE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -400,7 +400,8 @@
       },
       "source": [
         "# What are the 100 most common words in War and Peace?\r\n",
-        "# "
+        "# commonWords :: Int -> [Char] -> [Char]\r\n",
+        "# returns a list of the n most common words in the list as a string"
       ],
       "execution_count": null,
       "outputs": []
@@ -411,55 +412,29 @@
         "id": "AKgGnDiRDm5Z"
       },
       "source": [
-        "Lists of characters are denoted using double quotes. More on this in the exercises.\n",
-        "So we want to design a function, commonWords say, with type\n",
-        "commonWords :: Int -> [Char] -> [Char]\n",
-        "The function commonWords n takes a list of characters and returns a list of the\n",
-        "n most common words in the list as a string (another name for a list of characters) in \n",
-        "the form described above. The type of commonWords is written without\n",
-        "parentheses, though we can put them in:\n",
-        "commonWords :: Int -> ([Char] -> [Char])\n",
-        "Whenever two -> signs are adjacent in a type, the order of association is from right\n",
-        "to left, exactly the opposite convention of functional application. So A -> B -> C\n",
-        "means A -> (B -> C). If you want to describe the type (A -> B) -> C you\n",
-        "have to put in the parentheses. More on this in the next chapter.\n",
-        "Having understood precisely what is given and what is wanted, different people\n",
-        "come up with different ways of solving the problem, and express different worries\n",
-        "about various parts of the problem. For example, what is a ‘word’ and how do you\n",
-        "convert a list of characters into a list of words? Are the words \"Hello\", \"hello\"\n",
-        "and \"Hello!\" distinct words or the same word? How do you count words? Do\n",
-        "you count all the words or just the most common ones? And so on. Some ﬁnd these\n",
-        "details daunting and overwhelming. Most seem to agree that at some intermediate\n",
-        "point in the computation we have to come up with a list of words and their frequencies, but how do we get from there to the ﬁnal destination? Do we go through the\n",
-        "list n times, extracting the word with the next highest frequency at each pass, or is\n",
-        "there something better?\n",
-        "Let’s start with what a word is, and just assert that a word is a maximal sequence\n",
-        "of characters not containing spaces or newline characters. That allows words like\n",
-        "\"Hello!\", or \"3*4\" or \"Thelma&Louise\" but never mind. In a text a word is\n",
-        "identiﬁed by being surrounded by blank characters, so \"Thelma and Louise\"\n",
-        "contains three words.\n",
-        "\n",
-        "\f1.3 Example: common words\n",
-        "\n",
-        "5\n",
-        "\n",
         "We are not going to worry about how to split a text up into a list of its component\n",
         "words. Instead we just assume the existence of a function\n",
         "words :: [Char] -> [[Char]]\n",
+        "\n",
         "that does the job. Types like [[Char]] can be difﬁcult to comprehend, but in\n",
         "Haskell we can always introduce type synonyms:\n",
+        "\n",
         "type Text = [Char]\n",
         "type Word = [Char]\n",
+        "\n",
         "So now we have words :: Text -> [Word], which is much easier on the brain.\n",
         "Of course, a text is different from a word in that the former can contain blank\n",
         "characters and the latter cannot, but type synonyms in Haskell do not support such\n",
         "subtle distinctions. In fact, words is a library function in Haskell, so we don’t have\n",
         "to deﬁne it ourselves.\n",
+        "\n",
         "There is still the issue of whether \"The\" and \"the\" denote the same or different\n",
         "words. They really should be the same word, and one way of achieving this is to\n",
         "convert all the letters in the text to lowercase, leaving everything else unchanged.\n",
-        "To this end, we need a function toLower :: Char -> Char that converts uppercase letters to lowercase and leaves everything else unchanged. In order to apply\n",
+        "To this end, we need a function toLower :: Char -> Char that converts uppercase \n",
+        "letters to lowercase and leaves everything else unchanged. In order to apply\n",
         "this function to every character in the text we need a general function\n",
+        "\n",
         "map :: (a -> b) -> [a] -> [b]\n",
         "such that map f applied to a list applies f to every element of the list. So, converting everything to lowercase is done by the function\n",
         "map toLower :: Text -> Text\n",
@@ -806,6 +781,7 @@
         "\n",
         "> convert :: Int -> String\n",
         "> convert = convert6\n",
+        "\n",
         "What we would like to do now is actually use the computer to apply convert to\n",
         "some arguments. How?\n"
       ],
