Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNRF1i6smIeaeFAEMwzJdVp",
+      "authorship_tag": "ABX9TyNmT+UujWL1wdQNA4Cwl27R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -85,18 +85,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b43d2b2f-bcd4-4d51-e571-2b35fe9b75f6"
+        "outputId": "751f3bd1-7a5b-4ee9-a611-955ebef01bdd"
       },
       "source": [
         "# インストールされたことの確認\n",
         "!ghc --version"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
+            "/bin/bash: ghc: command not found\n"
           ],
           "name": "stdout"
         }
@@ -230,10 +230,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "aI8zFwZDDBwv",
-        "outputId": "6eab7c2e-c2f4-4188-81fe-aa8083191f6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6eab7c2e-c2f4-4188-81fe-aa8083191f6c"
       },
       "source": [
         "# 実験 コマンドラインワンライナーを普通のプログラムにしてみる\r\n",
@@ -243,7 +243,7 @@
         "    >>= mapM_ (putStrLn . reverse)\r\n",
         "      . lines"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,15 +258,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "WL3fgLZdDLWO",
-        "outputId": "436f2ed9-789d-456f-ad0b-2d57b1a28b1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "436f2ed9-789d-456f-ad0b-2d57b1a28b1a"
       },
       "source": [
         "!echo $'this is a pen\\n abcdef\\n12345' | runghc mapmreverse.hs"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,15 +283,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "vHKJHxtiDhQ5",
-        "outputId": "71123f4e-d5d5-47ce-e491-961e086bee49",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "71123f4e-d5d5-47ce-e491-961e086bee49"
       },
       "source": [
         "!runghc mapmreverse.hs"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,6 +301,35 @@
             "hogehoge\n",
             "egohegoh\n",
             "^C\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vv2t7vEGtJWj",
+        "outputId": "c3e2aad7-5dbc-4c27-962b-6dc22b964016",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 lines の代わりに words を使う\r\n",
+        "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e 'getContents>>= mapM_(putStrLn.reverse).words'"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "siht\n",
+            "si\n",
+            "a\n",
+            "nep\n",
+            "fedcba\n",
+            "54321\n"
           ],
           "name": "stdout"
         }
@@ -409,17 +438,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "SQhGN8z-EjlV",
-        "outputId": "d9d2bd7f-e503-4625-98b6-600a5b4e51b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d9d2bd7f-e503-4625-98b6-600a5b4e51b6"
       },
       "source": [
         "!ghc -e 'print 32'\r\n",
         "!ghc -e 'print (32, 18)'\r\n",
         "!ghc -e 'print (32*18)'"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
