Colaboratory を使用して作成しました

--- a/haskell_matrix.ipynb
+++ b/haskell_matrix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_matrix.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRIm36/IBCYPFsRTDaDq6A",
+      "authorship_tag": "ABX9TyO0w7KUE/wd5KkUNLk3kku9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,9 @@
         "行列 haskell  \r\n",
         "で検索\r\n",
         "\r\n",
+        "1. 行列計算用のHaskellライブラリ hmatrix を入れる  \r\n",
+        "https://mano.xyz/391/\r\n",
+        "1. hmatrix-0.20.1: Numeric Linear Algebra\r\n",
         "1. haskell プログラム集  \r\n",
         "https://userweb.mnet.ne.jp/tnomura/examples/matrix.html\r\n",
         "1. Haskellで数値計算 線形代数編  \r\n",
