Colaboratory を使用して作成しました

--- a/haskell_matrix.ipynb
+++ b/haskell_matrix.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_matrix.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0w7KUE/wd5KkUNLk3kku9",
+      "authorship_tag": "ABX9TyMMrRcGduOFxnn052BRKNP2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "!cabal update\r\n",
         "!cabal install hmatrix"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -70,8 +70,71 @@
       "source": [
         "!ghc -e $'import Numeric.LinearAlgebra'"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LS-o1Ry97qy6",
+        "outputId": "256570cb-3a37-48ea-d5f3-09788018ce5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# このプログラムは Graphics.Plot が deprecated なので研究中\r\n",
+        "%%writefile plot.hs\r\n",
+        "import Numeric.LinearAlgebra\r\n",
+        "import Graphics.Plot\r\n",
+        "plot2D f n = mesh (f x y) where\r\n",
+        "(x,y) = meshdom range range\r\n",
+        "range = linspace n (-2,2)\r\n",
+        "sombrero :: (Floating a) => a -> a -> a\r\n",
+        "sombrero x y = exp (-r2) * cos (2*r2) where r2 = x*x+y*y\r\n",
+        "f :: (Floating a) => a -> a\r\n",
+        "f x = sin x + 0.5 * sin (5*x)\r\n",
+        "main = do\r\n",
+        "let x = linspace 1000 (-4,4)\r\n",
+        "mplot [f x]\r\n",
+        "plot2D sombrero 40"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting plot.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QLb-rrkq7u0T",
+        "outputId": "e374c3ac-0ac9-482b-cab8-bff52f886015",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc plot.hs"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "plot.hs:2:1: error:\n",
+            "    Failed to load interface for ‘Graphics.Plot’\n",
+            "    Use -v to see a list of the files searched for.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
