Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_gentle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMem8HDiwKkWubapkNGG5Bb",
+      "authorship_tag": "ABX9TyPrZJNVIAjeeKyWGqHYPv8x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "\r\n",
         "# :: はなになにの型はなになに \"has type\" と読むことができる\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -70,13 +70,18 @@
         "inc            :: Integer -> Integer\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YHINhqE_xkS7"
+        "id": "YHINhqE_xkS7",
+        "outputId": "d25e132c-35c7-49b3-a1b3-86e2e86d6ad1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        }
       },
       "source": [
         "# e1 が評価され e2 になることを\r\n",
@@ -84,12 +89,22 @@
         "# と書く。\r\n",
         "\r\n",
         "# 例えば\r\n",
+        "%%script false\r\n",
         "\r\n",
         "inc (inc 3) => 5\r\n",
         "\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-9aba35ad801f>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    inc (inc 3) => 5\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -233,19 +248,10 @@
         "id": "54rS1eZ8Uxs3"
       },
       "source": [
+        "# Built-in 組み込みの型について\r\n",
+        "# 例えば Char は\r\n",
         "\r\n",
         "\r\n",
-        "\r\n",
-        "2.4 組み込みの型は特別な型ではない\r\n",
-        "これまで、リスト、タプル、整数、文字など、いくつかの「組み込み」型を紹介\r\n",
-        "しました。また、あたらしいユーザ定義の型の定義の方法も示しました。構文が\r\n",
-        "特別である以外に、組み込みの型は、ユーザ定義の型にくらべて特別なことはあ\r\n",
-        "るのだろうか？答えはノー特別な構文は利便性と歴史的な慣\r\n",
-        "習のためのもので、意味としてはなにも違いがない。\r\n",
-        "\r\n",
-        "この点をさらに強調するために、組み込みの型の宣言がどのようなものになりう\r\n",
-        "るかを考えてみましょう。もし、型の宣言の構文を組み込みの型に使えるとした\r\n",
-        "ら、たとえば、Char型はこんな風に書けるだろう。\r\n",
         "\r\n",
         "data Char = 'a' | 'b' | 'c' |\r\n",
         "... -- This is not valid\r\n",
