Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_gentle.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNHjK8HCU1CrejhN9WPHxFL",
+      "authorship_tag": "ABX9TyM2D+VSzkeCahelapAKi820",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,7 @@
         "\r\n",
         "a gentle introduction to haskell  \r\n",
         "https://www.sampou.org/haskell/tutorial-j/  \r\n",
+        "https://www.haskell.org/tutorial/  \r\n",
         "を読む。ノート。"
       ]
     },
@@ -355,7 +356,7 @@
         "!ghc -e $'let {add x y = x + y; inc = add 1} in print (add 4 5) '\r\n",
         "!ghc -e $'let {add (x, y) = x + y} in print (add (4, 5)) '"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +401,7 @@
         "# ラムダ抽象 (lambda abstraction) 無名関数\r\n",
         "# 例えば inc は  \\x -> x+1 と書く。\r\n",
         "# add は \\x -> \\y -> x + y と書く。\r\n",
-        "# 陥落かして \\x y -> x + y と書く。\r\n",
+        "# 簡略化して \\x y -> x + y と書く。\r\n",
         "%%script false\r\n",
         "\r\n",
         "inc x = x+1\r\n",
@@ -415,22 +416,13 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9-lkROGPkKPJ"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "0vHy_7FYkFa5"
       },
       "source": [
         "# 中置演算子 infix operator\r\n",
-        "# 中置演算子は関数なので、等式を使って定義する。\r\n",
+        "# 中置演算子は関数なので、等式を使って定義\r\n",
         "%%script false\r\n",
         "\r\n",
         "# リストの連結演算子\r\n",
@@ -457,59 +449,76 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "rmHpY3dUdFXR",
+        "outputId": "4ad7e589-e0fe-4fc9-d6fa-a567117e302d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 中置演算子の部分適用が関数を返すことの確認\r\n",
+        "# map (+) [1,2,3] は関数のリスト\r\n",
+        "\r\n",
+        "!ghc -e $'((map (+) [1,2,3])!!1) 5' #=> 7\r\n",
+        "!ghc -e $'((map (/) [1,2,3])!!1) 5' #=> 0.4\r\n",
+        "!ghc -e $'(map (5/) [1,2,3])!!1' #=> 2.5\r\n",
+        "!echo\r\n",
+        "!ghc -e $'map (/5) [1,2,3]'\r\n",
+        "!ghc -e $'map (5/) [1,2,3]'\r\n",
+        "!echo\r\n",
+        "!ghc -e $'map (^2) [1,2,3]'\r\n",
+        "!ghc -e $'map (2^) [1,2,3]'"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7\n",
+            "0.4\n",
+            "2.5\n",
+            "\n",
+            "[0.2,0.4,0.6]\n",
+            "[5.0,2.5,1.6666666666666667]\n",
+            "\n",
+            "[1,4,9]\n",
+            "[2,4,8]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "eqqaVVQ9Tms2"
       },
       "source": [
-        "\r\n",
-        "3.2.1 セクション\r\n",
-        "中置演算子はまさに関数ですから、関数と同じように、部分適用が可能です。\r\n",
-        "Haskell では中置演算子の部分適用のことをセクション\r\n",
-        "( section )といいます。例を見ましょう。\r\n",
-        "\r\n",
-        "(x+) = \\y -> x+y\r\n",
-        "(+y) = \\x -> x+y\r\n",
-        "(+) = \\x y -> x+y\r\n",
-        "[ここでの括弧は必須です。]\r\n",
-        "\r\n",
-        "上の例の最後のセクションの形式は中置演算子から同等の関数値へ変換する働き\r\n",
-        "をします。この形式は中置演算子を関数の引数として渡すときに便利な方法です。\r\n",
-        "たとえば、map (+) [1,2,3]\r\n",
-        "のようにします。(読者の皆さ\r\n",
-        "んはここで、関数のリストが返されていることを確かめてください。)\r\n",
-        "関数の型 を与える際にも必要になります。これはすでに\r\n",
-        "(++) および (.)\r\n",
-        "の例で示しましたね。さて、これですでに定義した add が\r\n",
-        "(+)、inc が (+1) で定義できることがわかり\r\n",
-        "ます。実際これらの定義がすっきりします。\r\n",
+        "# したがって\r\n",
+        "%%script false\r\n",
         "\r\n",
         "inc = (+ 1)\r\n",
         "add = (+)\r\n",
         "\r\n",
+        "# と書ける\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mMSn2u39e-I2"
+      },
+      "source": [
+        "# 関数をバッククオートで括ると中置演算子になる\r\n",
+        "%%script false\r\n",
         "\r\n",
-        "中置演算子を関数値に変換できましたが、それでは、その逆は可能なのでしょう\r\n",
-        "か。可能です。関数値をバッククウォートで括るだけです。たとえば、\r\n",
-        "x `add` y は、add x y と同じです。\r\n",
-        "(これは、add がバッククオート で括るのであって、文字の\r\n",
-        "場合のアポストロフィ(あるいはシングルクウォート)で括る\r\n",
-        "わけではありません。つまり、'f' は文字で、`f`\r\n",
-        "は中置演 算子です。幸い、ほとんどの ASCII\r\n",
-        "端末ではこのふたつを区別できるようになっ\r\n",
-        "ています。(手で書くとそうはいかないようです。)\r\n",
-        "関数によっては、中置演算\r\n",
-        "子にしたほうが読みやすくなります。たとえば、リストの要素かどうかを調べる\r\n",
-        "述語関数 elem がその例です。x `elem` xs\r\n",
-        "は直 観的に「x が属しているのは xs である。( x\r\n",
-        "is an element of xs )」と読めます。\r\n",
+        "x `elem` xs\r\n",
         "\r\n",
-        "[前置/中置演算子 -\r\n",
-        "のセクションについてはいくつかの特別なルール\r\n",
-        "があります。(§3.5,§3.4)。]\r\n",
+        "# は直感的に、x は xs の要素である ( x is an element of xs ) と読める。\r\n",
         "\r\n",
-        "ここまでで、読者のみなさんは関数の定義のしかたにいろいろあって、混乱した\r\n",
-        "かもしれません。これらの定義のメカニズムのサポートを決定するにあたっては、\r\n",
-        "歴史的な慣習も部分的には反映されていますし、一貫性を確保したい(たとえば、\r\n",
-        "中置演算子と普通の関数の取り扱いなど)という要望も反映されています。\r\n",
-        "\r\n"
+        "# (-) については特別なルールがある。\r\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -520,34 +529,29 @@
         "id": "lMib8a4fTi8f"
       },
       "source": [
-        "\r\n",
-        "3.2.2 結合性宣言\r\n",
-        "結合性宣言( fixity declaration )\r\n",
-        "はすべての中置演算子と 中置構築子 ( `elem`\r\n",
-        "のような一般の識別子に由来するものも含む)に\r\n",
-        "対しておこなうことができます。この宣言では 0 から 9\r\n",
-        "までの優先レベル( 9\r\n",
-        "が最強です。一般の関数適用の優先レベルは 10\r\n",
-        "と仮定されています。)と、右\r\n",
-        "結合性、左結合性をもつ、あるいは結合性をもたない、という指定をします。例\r\n",
-        "をあげると ++ と . の結合性宣言は、\r\n",
+        "# 結合度 fixity の優先順位\r\n",
+        "# fixity declaration では 0 から 9 を指定する。 9 が最強。\r\n",
+        "# 一般の関数は 10 と仮定されている。\r\n",
+        "# infixr は右結合、 infixl は左結合\r\n",
+        "%%script false\r\n",
         "\r\n",
         "infixr 5 ++\r\n",
         "infixr 9 .\r\n",
         "\r\n",
-        "です。両方とも右結合性が指定されています。++ は優先レベル\r\n",
-        "5 で . は優先レベル 9 と指定されています。左結合性は\r\n",
-        "infixl を使って指定し、結合性のないことは infix\r\n",
-        "で指定 します。おなじ結合性宣言で 1\r\n",
-        "つ以上の演算子の結合性について指定できます。\r\n",
-        "もし、ある演算子に対して、結合性宣言をしない場合はデフォルトで\r\n",
-        "infixl 9 が指定されたことになります。(\r\n",
-        "結合性ルールの定義 の詳細については §5.6\r\n",
-        "参照のこと。)\r\n",
+        "# デフォルトは infixl 9\r\n",
         "\r\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9-lkROGPkKPJ"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "code",
@@ -555,98 +559,55 @@
         "id": "iwJlMBTTTfCA"
       },
       "source": [
-        "\r\n",
-        "3.3 関数は非正格\r\n",
-        "bot が次のように定義されているとしましょう。\r\n",
+        "# 関数は非正格 non-strict\r\n",
+        "# bot が次のように定義されているとする。\r\n",
+        "%%script false\r\n",
         "\r\n",
         "bot = bot\r\n",
         "\r\n",
-        "bot は停止しない式です。このような停止しない式の値を抽\r\n",
-        "象的に\r\n",
-        "_|_(ボトムと読む)と表わします。ある種の実行時エラーになる式、たと\r\n",
-        "えば、1/0\r\n",
-        "のような式もこの値を持ちます。このようなエラーは回復\r\n",
-        "不可能で、プログラムはこれ以上継続することはできなくなります。I/O\r\n",
-        "システ ムのエラー(たとえば、EOF\r\n",
-        "エラーなど)は回復可能で、べつの方法で取り扱い\r\n",
-        "ます。(このような I/O\r\n",
-        "エラーは、実はエラーではなく、例外です。例外につい\r\n",
-        "ての詳細は 7 節でふれます。)\r\n",
+        "# このような停止しない式の値を抽象的に _|_(ボトム)と表わす。\r\n",
+        "# 1/0 もこの値を持ち、エラーは回復不可能で、プログラムはこれ以上継続することはできなくなる。\r\n",
+        "# I/O のシステムのエラー(たとえば、EOFエラーなどの例外)は回復可能。\r\n",
         "\r\n",
-        "関数 f が正格 ( strict )\r\n",
-        "であるとは、停止しない\r\n",
-        "式に適用されれば、その適用式も停止しないことをいいます。いいかえると、\r\n",
-        "f bot が _|_ の時でかつその時にかぎり、f\r\n",
-        "は正格で\r\n",
-        "あるといいます。ほとんどのプログラミング言語では、すべての関数\r\n",
-        "が正格です。ただ、 Haskell\r\n",
-        "では違います。簡単な例、つねに 1 を返す関数 const1\r\n",
-        "を考えましょう。定義は、\r\n",
+        "# 関数 f が正格 strict であるとは、停止しない式に適用されれば、その適用式も停止しないこと。\r\n",
+        "# ほとんどのプログラミング言語では、すべての関数が正格。Haskell では違う。\r\n",
         "\r\n",
         "const1 x = 1\r\n",
         "\r\n",
-        "です。const1 bot の値は Haskell では 1\r\n",
-        "です。操作 的な観点からいうと、const1\r\n",
-        "はその引数の値を「必要」としないので、\r\n",
-        "引数は決して評価されません。だから停止しない計算に陥いることがないのです。\r\n",
-        "こういうわけで、非正格関数は「遅延関数 ( lazy\r\n",
-        "function ) 」とも呼ばれ、\r\n",
-        "その引数の評価については「遅延評価」とか「必要呼び評価」とかいわれていま\r\n",
-        "す。\r\n",
+        "# のとき、const1 bot は 1 であり、引数は評価されない。 これを遅延評価と呼ぶ。\r\n",
         "\r\n",
-        "Haskell\r\n",
-        "では、エラーや停止しない値は、意味論的に同じものですから、上の引数\r\n",
-        "にはエラーも含まれています。たとえば、 const1\r\n",
-        "(1/0) もちゃ んと評価されて 1 になります。\r\n",
+        "const1 (1/0)\r\n",
         "\r\n",
-        "非正格関数は多くの場面で、たいへん役に立ちます。そのなかで、主要な利点は、\r\n",
-        "プログラマが評価の順に気をくばらなくてもよい、ということです。計算上高価\r\n",
-        "な値を、必要もないのに余分な計算をしなければならないかもしれない、などと\r\n",
-        "心配せずに関数へ渡すことができます。重要な例のひとつは、無限の\r\n",
-        "( infinite ) データ構造です。\r\n",
+        "# も 1 になる。\r\n",
         "\r\n",
-        "もうひとつ別のやりかたで非正格関数を説明しましょう。Haskell\r\n",
-        "は伝統的な言 語のように代入 ( assignment )\r\n",
-        "ではなく、定義 ( definition )\r\n",
-        "を用いて計算をすすめます。たとえば、\r\n",
+        "# 遅延評価により、無限 infinite のデータ構造が扱える。\r\n",
+        "\r\n",
+        "# 別のやり方で説明すると、Haskell では代入 assignment ではなく、定義 definition を用いる。\r\n",
         "\r\n",
         "v = 1/0\r\n",
         "\r\n",
-        "のような宣言は、「 v を 1/0\r\n",
-        "と定義する」と読みます。こ れは、「 1/0\r\n",
-        "を計算し、その結果を v へ格納する」とは読 みません。v\r\n",
-        "の値(定義)が必要になったときにのみゼロ除算エラーが\r\n",
-        "発生します。宣言それだけでは計算は起こりません。代入を必要とするプロ\r\n",
-        "グラミングではその代入の順序に細心の注意をはらう必要があります。プログラ\r\n",
-        "ムの意味は代入がおこる順序に依存します。一方、定義はずっと単純で、プログ\r\n",
-        "ラムの意味には影響あたえず、どのような順で出現してもかまいません。\r\n",
-        "\r\n",
-        "\r\n",
-        "3.4 「無限の」データ構造\r\n",
-        "Haskell\r\n",
-        "の非正格な性質の利点のひとつは、データコンストラクタもが非正格で\r\n",
-        "あることです。このことはべつに驚くべきことではありません。コンストラクタ\r\n",
-        "は特殊な関数にすぎません(ふつうの関数との違いは、パターンマッチで使われ\r\n",
-        "るということです)。たとえば、リストの構築子、:\r\n",
-        "は非正格です。\r\n",
-        "\r\n",
-        "非正格の構築子で(概念的に)無限の( infinite\r\n",
-        ")データ構造を 定義することができます。これは、1\r\n",
-        "の無限リストです。\r\n",
+        "# は、v を 1/0と定義すると読む。vの値が必要になったときにのみゼロ除算エラーが発生する。\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q821gWlEjcxz"
+      },
+      "source": [
+        "# 無限のデータ構造\r\n",
+        "# データコンストラクタも非正格である。\r\n",
+        "# リストのコンストラクタ、: も非正格。\r\n",
+        "# 非正格の構築子で(概念的に)無限の infinite データ構造を 定義することができる。\r\n",
+        "%%script false\r\n",
         "\r\n",
         "ones = 1 : ones\r\n",
         "\r\n",
-        "さらに面白いのは、numsFrom 関数です。\r\n",
+        "numsFrom n = n : numsFrom (n+1)\r\n",
         "\r\n",
-        "numsFrom n = n : numsFrom\r\n",
-        "(n+1)\r\n",
-        "\r\n",
-        "numsFrom n は n\r\n",
-        "から始まる無限の整数リストです。\r\n",
-        "これを使って、平方数の無限リストを構成することができます。\r\n",
-        "\r\n",
-        "squares = map (^2) (numsFrom\r\n",
-        "0)\r\n",
+        "squares = map (^2) (numsFrom 0)\r\n",
         "\r\n",
         "(ここで、セクションの使いかたに注目してください。^\r\n",
         "は中置の指数 演算子です。)\r\n",
