Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_gentle.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPDHtPhb+X3Bpe02AuL+Ob6",
+      "authorship_tag": "ABX9TyMvCPMPu/cvVL/PKvGBPzUY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -607,16 +607,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "-LRVZ6YQsonz",
-        "outputId": "dc1c4e49-091a-4f28-dde8-c8df7ed71b9c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dc1c4e49-091a-4f28-dde8-c8df7ed71b9c"
       },
       "source": [
         "# 実験 take 5 squares => [0,1,4,9,16]\r\n",
         "!ghc -e $'let{numsFrom n = n:numsFrom(n+1); squares = map (^2)(numsFrom 0)} in print (take 5 squares)'"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,16 +631,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "i9IDhIi8vPQ_",
-        "outputId": "741dcca6-f49b-413e-ac79-3a7b5c18d490",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "741dcca6-f49b-413e-ac79-3a7b5c18d490"
       },
       "source": [
         "# 実験 ones は循環リスト circular list\r\n",
         "!ghc -e $'let{ones=1:ones} in print (take 5 ones)'"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,6 +682,49 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kytnaqOUxmKi"
+      },
+      "source": [
+        "# Case 式\r\n",
+        "# パターンは入れ子にも使える。\r\n",
+        "%%script false\r\n",
+        "\r\n",
+        "contrived :: ([a], Char, (Int, Float), String, Bool) -> Bool\r\n",
+        "contrived ([], 'b', (1, 2.0), \"hi\", True) = False\r\n",
+        "\r\n",
+        "# 仮引数 (formal parameters) もパターンであり、値にかならず照合が成功する。\r\n",
+        "# その副作用として、仮引数は照合が成功した値に束縛される。\r\n",
+        "# なぜなら、ひとつの等式であれば、そのなかのパターンには、2つ以上の同じ仮引数が含まれてはいけないから。\r\n",
+        "# これは、線型性 (linearity) と呼ばれる。\r\n",
+        "# 仮引数のような必ず照合が成功するようなパターンのことを irrefutable パターンと呼び、\r\n",
+        "# refutable パターンは照合が成功しない可能性があり contrived の例はこの refutable の例。\r\n",
+        "# 不可反駁パターンに は 3つの種類がありそのうち 2つを紹介する。\r\n",
+        "\r\n",
+        "# アズパターン\r\n",
+        "# たとえばリストの第一要素を複製する関数\r\n",
+        "\r\n",
+        "f (x:xs) = x:x:xs\r\n",
+        "\r\n",
+        "# 明日パターンを使うと次のようになる。\r\n",
+        "\r\n",
+        "f s@(x:xs) = x:s\r\n",
+        "\r\n",
+        "# アズパターンは照合に常に成功するが、サブパターン(この場合は、x:xs)はもちろん照合が成功しないこともある。\r\n",
+        "\r\n",
+        "# ワイルドカード\r\n",
+        "# head 関数や tail 関数は次のように書き換えることができる。\r\n",
+        "\r\n",
+        "head (x:_) = x\r\n",
+        "tail (_:xs) = xs\r\n",
+        "\r\n",
+        "# 仮引数の場合とちがい、ワイルドカードはひとつの等式のなかに 1つ以上あっても構わない。\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3Afd1DAExM2I"
@@ -693,113 +736,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kytnaqOUxmKi"
-      },
-      "source": [
-        "やさしい Haskell 入門 ( Version 98 )\r\n",
-        "back next top\r\n",
-        "\r\n",
-        "\r\n",
-        "4 Case 式とパターン照合\r\n",
-        "パターン照合の例は前に length や fringe\r\n",
-        "の関数の\r\n",
-        "定義の際に示しました。この節ではパターン照合のプロセスを詳細に見て\r\n",
-        "いきましょう( §3.17 ) ( Haskell\r\n",
-        "におけるパターン照合は、たとえば Prolog\r\n",
-        "のような、論理\r\n",
-        "プログラミング言語にみられるものとは違いがあります。とくに、Haskell\r\n",
-        "の 照合は「一方向」です。一方 Prolog\r\n",
-        "の照合は(単一化による)「双方向」で、\r\n",
-        "その評価機構のなかで暗黙のバックトラックによるもです。)\r\n",
-        "\r\n",
-        "パターンは「第一級の対象」ではありません。いろいろな種類のパターンの固定\r\n",
-        "的な集合があるだけです。すでに、データ構築子のパターンのいくつ\r\n",
-        "かの例をしめしました。以前に定義した length と\r\n",
-        "fringe\r\n",
-        "はこうしたパターンをつかって定義してあります。前者は「組み込み」の型(リ\r\n",
-        "スト)の上での例で、後者は、「ユーザ定義」の型( Tree\r\n",
-        ")の上での例\r\n",
-        "です。照合はユーザ定義かどうかには関係なく、すべての型で使うことが\r\n",
-        "できます。これには、タプル、文字列、数、文字などが含まれます。例をあげま\r\n",
-        "しょう。ここに、「定数」のタプルに対して照合が成功する\r\n",
-        "contrived 関 数があります。\r\n",
-        "\r\n",
-        "contrived :: ([a], Char, (Int,\r\n",
-        "Float), String, Bool) -> Bool\r\n",
-        "contrived ([], 'b', (1, 2.0),\r\n",
-        "\"hi\", True) = False\r\n",
-        "\r\n",
-        "この例で、入れ子になったパターン(入れ子の深さは任意)も使えるこ\r\n",
-        "とがわかります。\r\n",
-        "\r\n",
-        "テクニカルないいまわしをすれば、仮引数( formal\r\n",
-        "parameters ) (レポートでは変数(\r\n",
-        "variable )と呼ばれて\r\n",
-        "いるもの)もパターンです。つまり、ある値にかならず照合が成功します。\r\n",
-        "この照合が成功する副作用として、仮引数は照合が成功した値に束縛されます。その\r\n",
-        "わけは、ひとつの等式であれば、そのなかのパターンには、2つ以上の同じ仮引\r\n",
-        "数が含まれてはいけないからです。(これは、線型性 (\r\n",
-        "linearity )\r\n",
-        "とよばれている性質です。§3.17、§3.3、§4.4.2)\r\n",
-        "\r\n",
-        "仮引数のような必ず照合が成功するようなパターンのことを不可反駁\r\n",
-        "( irrefutable\r\n",
-        ")パターンといいます。反対に可反駁 ( refutable\r\n",
-        ")パターンは照合が成功しない可能性があります。上であげた\r\n",
-        "contrived\r\n",
-        "の例はこの可反駁パターンの例です。不可反駁パターンに は 3\r\n",
-        "つの種類があります。そのうち 2\r\n",
-        "つを紹介しましょう。(のこりは、4.4\r\n",
-        "節までまってください。)\r\n",
-        "\r\n",
-        "アズパターン\r\n",
-        "場合によってはパターンに名前がついていれば、等式の右辺で使えて便利なこと\r\n",
-        "があります。たとえば、リストの第一要素を複製する関数はつぎのように書けま\r\n",
-        "す。\r\n",
-        "\r\n",
-        "f (x:xs) = x:x:xs\r\n",
-        "\r\n",
-        "(「:」は右結合性があることを思いだしてください。)\r\n",
-        "x:xs\r\n",
-        "というパターンが左辺と右辺の両方にあります。可読性向上のためには\r\n",
-        "x:xs は一度だけ書くほうがよく、アズパターン (\r\n",
-        "as-pattern\r\n",
-        ")を使ってこれを達成します。(このパターンを使うもうひ\r\n",
-        "とつの利点は、素朴な実装では、照合が成功した値を再利用せずに、x:xs\r\n",
-        "を再構築することになるからです。)\r\n",
-        "\r\n",
-        "f s@(x:xs) = x:s\r\n",
-        "\r\n",
-        "技術的な観点からいうと、アズパターンは照合に常に成功します。ただし、\r\n",
-        "サブパターン(この場合は、x:xs\r\n",
-        ")はもちろん照合が成功しないこともあり ます。\r\n",
-        "\r\n",
-        "ワイルドカード\r\n",
-        "よくある状況をもうひとつ、それはとくに値を気にしない照合です。たと\r\n",
-        "えば、2.1 節で定義した head 関数や tail\r\n",
-        "関数は次のように書き換ることができま す。\r\n",
-        "\r\n",
-        "head (x:_) = x\r\n",
-        "tail (_:xs) = xs\r\n",
-        "\r\n",
-        "この定義では、入力されたものの一部は気にしないということがはっきり「広告」\r\n",
-        "されています。各ワイルドカードはそれぞれ独立にどんなものとも照合が成功しま\r\n",
-        "す。しかし、仮引数の場合とちがい、それぞれは何にも束縛されません。というわ\r\n",
-        "けで、ワイルドカードパターンはひとつの等式のなかに 1\r\n",
-        "つ以上あってもかま いません。\r\n",
-        "\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "lDDePI7Mxz-Y"
       },
       "source": [
+        "# パターン照合の意味論 semantics\r\n",
         "\r\n",
-        "4.1 パターン照合の意味論\r\n",
         "これまで、個々のパターンがどのように照合に成功し、あるいは可反駁のものと、\r\n",
         "不可反駁のものがあるということを議論してきました。しかし、どのようにして、\r\n",
         "その処理全体がおこなわれるのでしょうか。どのような順序で照合がためされる\r\n",
