Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_gentle.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNpcN8cCvPhzceGUCIR+VbV",
+      "authorship_tag": "ABX9TyNC/HhMPr1QJUD5DUPoIM2a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,41 @@
         "https://www.sampou.org/haskell/tutorial-j/  \r\n",
         "https://www.haskell.org/tutorial/  \r\n",
         "を読む。ノート。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1uIL6O97ZUVj"
+      },
+      "source": [
+        "%%capture\r\n",
+        "!apt install haskell-platform"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4mGx09C_ZeXG",
+        "outputId": "23de594f-9301-4eb9-ab4c-aba0b7a991c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc --version"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -946,20 +981,23 @@
       "cell_type": "code",
       "metadata": {
         "id": "VZVXuJOTUkdk",
-        "outputId": "fe1f2d59-2404-4744-b07f-624bad8ab9ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8112b31d-32d4-454c-b4db-f607b50a7761"
       },
       "source": [
-        "!ghc --version"
+        "# 実験\r\n",
+        "!ghc -e $'let {fib = 1 : 1 : [ a+b | (a,b) <- zip fib (tail fib) ]} in print (take 5 fib)'\r\n",
+        "!ghc -e $'let {fib@(1:tfib) = 1 : 1 : [ a+b | (a,b) <- zip fib tfib ]} in print (take 5 fib)'"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/bin/bash: ghc: command not found\n"
+            "[1,1,2,3,5]\n",
+            "[1,1,2,3,5]\n"
           ],
           "name": "stdout"
         }
