Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_gentle.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOYcLdeHw0ffs5/QXNHUQLi",
+      "authorship_tag": "ABX9TyOweyWz0UOvsnFZpe+pvTQd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1070,42 +1070,16 @@
         "# すでに述べてきた多相 polymorphism は、パラメータ多相 parametric polymorphism とよばれる。\r\n",
         "# アドホック多相は多重定義 overloading という呼びかたのほうが知られている。\r\n",
         "# たとえば\r\n",
+        "# 1、2 などのリテラルは、固定長の整数と任意長の整数の両方で使われる。\r\n",
+        "# + のような数値演算子は何種類もの数値上で定義される。\r\n",
+        "# 同値演算子 (Haskell では == ) は数値とその他多くの型の上で動作する。\r\n",
+        "# Haskell では、 型クラスによって多重定義を制御する。\r\n",
         "\r\n",
-        "1、2 などのリテラルは、固定長の整数と任意長の整数の両\r\n",
-        "方でつかわれることが多い。\r\n",
+        "# elem 関数の定義を見てみよう。\r\n",
+        "%%script false\r\n",
         "\r\n",
-        "+\r\n",
-        "のような数値演算子は何種類もの数値上で定義されることが多い。\r\n",
-        "\r\n",
-        "同値演算子( Haskell では ==\r\n",
-        ")はふつう数値とその他多く(すべてで\r\n",
-        "はない)の型の上で動作することが多い。\r\n",
-        "\r\n",
-        "こうした多重定義されたものの振舞いはそれぞれの型によって違いがあるという\r\n",
-        "ことに注意してください。(実際には、振舞いが定義されていないか、エラーに\r\n",
-        "なる場合もある。)\r\n",
-        "また、一方で、パラメータ多相では型そのものは重要で\r\n",
-        "はないことに注意してください。(たとえば、fringe\r\n",
-        "は木の葉の要素 の種類がなんであるかには関係あらない。)\r\n",
-        "Haskell では、 型クラス( class type\r\n",
-        ")によってアドホック多相あるいは多重\r\n",
-        "定義を制御する方法が提供されている。\r\n",
-        "単純だが、重要な例、同値性の例からはじめよう。同値性を定義したい型\r\n",
-        "には多くの型がある。しかし、いくつかの型については同値性を定義したく\r\n",
-        "ないこともある。たとえば、一般的にいって、関数が同値であるかどうかの\r\n",
-        "判定は計算では処理が困難だ。その一方で、ふたつのリストが同じかどうかを比\r\n",
-        "較したいことはよくあることだ。(ここで、同値性といっているのは、「値同値\r\n",
-        "性」のことだ。対照的な概念としては、「ポインタ同値性」というのがありま\r\n",
-        "す。たとえば、Java 言語の ==\r\n",
-        "だ。ポインタ同値性は参照透明性を\r\n",
-        "持ちない。それゆえに純粋な関数型言語とは相性がよくあらない。)\r\n",
-        "このこ\r\n",
-        "とをもっと明かにするために、リストの要素かどうかを検証する\r\n",
-        "elem という関数の定義をみてみよう。\r\n",
-        "\r\n",
-        "x `elem` [] = False\r\n",
-        "x `elem` (y:ys) = x==y || (x\r\n",
-        "`elem` ys)\r\n",
+        "x `elem`  []            = False\r\n",
+        "x `elem` (y:ys)         = x==y || (x `elem` ys)\r\n",
         "\r\n",
         "[ 3.1 節で議論した構文的な理由に より、elem\r\n",
         "を定義するのに中置形式を選択する。== と ||\r\n",
